--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
         <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
         {% endif %}
       </header>
-      <section>
+      <section width="100%">
         
         aklsdf bakwefgh bkashnalksfa
 
