--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,9 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner" width="100%">
+        blarlg
         {{ content }}
+        
       </section>
     </div>
 
