--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
   <body>
 
     <!-- HEADER -->
-    <div id="header_wrap" class="outer" width="90vh">
+    <div id="header_wrap" class="outer" width="90vw">
         <header class="inner">
           {% if site.github.is_project_page %}
             <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
@@ -25,7 +25,7 @@
     </div>
 
     <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer" width="90vh">
+    <div id="main_content_wrap" class="outer" width="90vw">
       <section id="main_content" class="inner" width="100%">
         blarlg
         {{ content }}
