--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
 
     <!-- HEADER -->
     <div id="header_wrap" class="outer" width="90vw">
-        <header class="inner">
+        <header class="header">
 
           <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
           <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
@@ -23,7 +23,7 @@
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer" width="90vw">
-      <section id="main_content" class="inner" width="100%">
+      <section id="main_content" class="content">
         blarlg
         {{ content }}
         
