--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,9 +3,9 @@
 
 @import "{{ site.theme }}";
 content {
-  width: 87%
-  border: 0px
+  width: 87%;
+  border: 0px;
 }
 header {
-   width: 70% 
+   width: 70% ;
 }
