--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
   <body>
 
     <!-- HEADER -->
-    <div id="header_wrap" class="outer" width="90vw">
+    <div id="header_wrap" class="outer">
         <header class="header">
 
           <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
@@ -22,7 +22,7 @@
     </div>
 
     <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer" width="90vw">
+    <div id="main_content_wrap" class="outer">
       <section id="main_content" class="content">
         blarlg
         {{ content }}
