--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
   <body>
 
     <!-- HEADER -->
-    <div id="header_wrap" class="main">
+    <div id="header_wrap" width="90vh">
         <header class="header">
 
           <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
@@ -22,7 +22,7 @@
     </div>
 
     <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="main">
+    <div id="main_content_wrap" width="90vh">
       <section id="main_content" class="content">
         blarlg
         {{ content }}
@@ -30,7 +30,7 @@
     </div>
 
     <!-- FOOTER  -->
-    <div id="footer_wrap" class="main">
+    <div id="footer_wrap" width="90vh">
       <footer class="inner">
         {% if site.github.is_project_page %}
         <p class="copyright">{{ site.title | default: site.github.repository_name }} maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
