--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,8 +13,8 @@
   <body>
 
     <!-- HEADER -->
-    <div id="header_wrap" width="90vh">
-        <header class="header">
+    <div id="header_wrap" width="90vw">
+        <header class="header" width="100%">
 
           <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
           <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
@@ -22,8 +22,8 @@
     </div>
 
     <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" width="50vh">
-      <section id="main_content" class="content">
+    <div id="main_content_wrap" width="90vw">
+      <section id="main_content" width="100%">
         blarlg
         {{ content }}
       </section>
