--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
   <body>
 
     <!-- HEADER -->
-    <div id="header_wrap" width="90vw">
+    <div id="header_wrap" width="90%">
         <header class="header" width="100%">
 
           <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
@@ -22,9 +22,8 @@
     </div>
 
     <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" width="90vw">
+    <div id="main_content_wrap" width="90%">
       <section id="main_content" width="100%">
-        blarlg
         {{ content }}
       </section>
     </div>
