--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 {% seo %}
   </head>
 
-  <body width="90vw">
+  <body margin="1%">
 
     <!-- HEADER -->
     <div id="header_wrap" width="90%">
