--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 {% seo %}
   </head>
 
-  <body margin="10%">
+  <body style="margin:10%">
 
     <!-- HEADER -->
     <div id="header_wrap" width="90%">
