--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,1 +1,9 @@
-# Testing 1 2 3
+<html>
+    <head>
+        <link rel="stylesheet" href="styles.css" />
+        <title>{{ title }}</title>
+    </head>
+    <body>
+        {{ content }}
+    </body>
+</html>
