--- a/_layouts/style.css
+++ b/_layouts/style.css
@@ -5,19 +5,26 @@ main {
     justify-content: space-between;
   }
 
-  div {
+nav {
+    background: #767775;
+    flex-basis: 100%;
+    width: 200px;
+    margin-right: 0.5rem;
+}
+
+div {
     background: #767775;
     flex-basis: 100%;
     height: 100px;
     margin-bottom: 0.5rem;
-  }
+}
 
-  @media (min-width: 600px) {
+@media (min-width: 600px) {
     main {
-      flex-wrap: nowrap;
+        flex-wrap: nowrap;
     }
 
     div {
-      flex-basis: 33%;
+        flex-basis: 33%;
     }
-  }
+}
