--- a/_layouts/style.css
+++ b/_layouts/style.css
@@ -5,11 +5,21 @@ main {
     justify-content: space-between;
   }
 
-nav {
-    background: #767775;
-    flex-basis: 100%;
-    width: 200px;
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    background: #aeafad;
+    flex-basis: 10%;
+    width: 60;
     margin-right: 0.5rem;
+}
+
+li a {
+    color: white;
+    display: block;
+    /* padding: 0.5rem 1rem;
+    text-decoration: none; */
 }
 
 div {
