--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,9 +20,12 @@
             <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
           {% endif %}
 
-          <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
-          <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
-
+            <section id="navigation">
+                <a href="books/reading.md">Reading & Reviews</a>
+                <a href="math/math.md">Math</a>
+                <a href=""projects/projects.md">Projects</a>
+                <a href="about/about.md">About</a>
+            </section>
           {% if site.show_downloads %}
             <section id="downloads">
               <a class="zip_download_link" href="{{ site.github.zip_url }}">Download this project as a .zip file</a>
