--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,12 +20,12 @@
             <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
           {% endif %}
 
-            <section id="navigation">
-                <a href="books/reading.md">Reading & Reviews</a>
-                <a href="math/math.md">Math</a>
-                <a href=""projects/projects.md">Projects</a>
-                <a href="about/about.md">About</a>
-            </section>
+            <ul class="navigation">
+                <li><a href="books/reading.md">Reading & Reviews</a></li>
+                <li><a href="math/math.md">Math</a></li>
+                <li><a href=""projects/projects.md">Projects</a></li>
+                <li><a href="about/about.md">About</a></li>
+            </ul>
           {% if site.show_downloads %}
             <section id="downloads">
               <a class="zip_download_link" href="{{ site.github.zip_url }}">Download this project as a .zip file</a>
@@ -45,10 +45,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        {% if site.github.is_project_page %}
-        <p class="copyright">{{ site.title | default: site.github.repository_name }} maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
-        {% endif %}
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+        <p class="copyright">By Neal Coleman</p>
       </footer>
     </div>
   </body>
