update including math

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,8 +8,9 @@ navigation {
     color: #fff;
     padding: 10px;
     margin-bottom: 20px;
+    float: right;
     a {
-        display: block
+        display: block;
         color: #fff;
         text-decoration: none;
         margin-right: 10px;
