--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
             <ul class="navigation">
                 <li><a href="books/reading.md">Reading & Reviews</a></li>
                 <li><a href="math/math.md">Math</a></li>
-                <li><a href=""projects/projects.md">Projects</a></li>
+                <li><a href="projects/projects.md">Projects</a></li>
                 <li><a href="about/about.md">About</a></li>
             </ul>
         </header>
