--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
                 <li><a href="books/reading.md">Reading & Reviews</a></li>
                 <li><a href="math/math.md">Math</a></li>
                 <li><a href="projects/projects.md">Projects</a></li>
-                <li><a href="about/about.md">About</a></li>
+                <li><a href="about.md">About</a></li>
             </ul>
         </header>
     </div>
