--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,10 +17,11 @@
     <div id="header_wrap" class="outer">
         <header class="inner">
             <ul class="navigation">
-                <li><a href="books/reading.md">Reading & Reviews</a></li>
-                <li><a href="math/math.md">Math</a></li>
-                <li><a href="projects/projects.md">Projects</a></li>
-                <li><a href="about.md">About</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="books/reading.html">Reading & Reviews</a></li>
+                <li><a href="math/math.html">Math</a></li>
+                <li><a href="projects/projects.html">Projects</a></li>
+                <li><a href="about.html">About</a></li>
             </ul>
         </header>
     </div>
