update including math

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,7 +10,8 @@
     overflow: hidden;
     background-color: #333;
     li: {
-        float: left;
+        float: right;
+        display: inline;
     }
     a {
         display: block;
