--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,14 +17,16 @@
     <div id="header_wrap" class="outer">
         <header class="inner">
         </header>
-        <ul class="navigation">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="books/reading.html">Reading & Reviews</a></li>
-            <li><a href="math/math.html">Math</a></li>
-            <li><a href="projects/projects.html">Projects</a></li>
-            <li><a href="about.html">About</a></li>
-        </ul>
-</div>
+    </div>
+
+    <nav class="navigation">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="books/reading.html">Reading & Reviews</a></li>
+        <li><a href="math/math.html">Math</a></li>
+        <li><a href="projects/projects.html">Projects</a></li>
+        <li><a href="about.html">About</a></li>
+    </nav>
+
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
