--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,6 +3,7 @@
 
 @import "{{ site.theme }}";
 
+
 .navigation {
     list-style-type: none;
     margin: 0;
@@ -11,7 +12,7 @@
     background-color: #333;
     li: {
         float: right;
-        display: inline;
+        display: inline-block;
     }
     a {
         display: block;
