update including math

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,13 +22,13 @@
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
-        <nav class="navigation">
+        <nav class="navigation"><ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="books/reading.html">Reading & Reviews</a></li>
             <li><a href="math/main.html">Math</a></li>
             <li><a href="projects/projects.html">Projects</a></li>
             <li><a href="about.html">About</a></li>
-        </nav>
+        </ul></nav>
 
 
       <section id="main_content" class="inner">
