--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,13 +16,14 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
+            <h1 id="project_title">Black coffee. Neat whisky.</h1>
         </header>
     </div>
 
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
-        <nav class="navigation"><ul>
+        <nav class="inner"><ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="books/reading.html">Reading & Reviews</a></li>
             <li><a href="math/main.html">Math</a></li>
