--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,6 +5,8 @@
 
 
 nav {
+
+    float: left;
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -12,6 +14,7 @@ nav {
     background-color: #333;
     li: {
         float: left;
+        display: inline;
     }
     a {
         display: block;
