--- a/_layouts/style.scss
+++ b/_layouts/style.scss
@@ -3,6 +3,23 @@
 
 @import "{{ site.theme }}";
 
+header {
+    background-color: #333;
+    padding: 1em 0;
+    text-align: center;
+    h1 {
+        margin: 0;
+        padding: 0;
+    }
+
+}
+
+.body {
+    font-family: Verdana, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #f4f4f4;
+}
 
 nav {
 
