--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,34 +4,32 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,maximum-scale=2">
-    <link rel="stylesheet" type="text/css" media="screen" href="style.scss">
-<!-- 
-{% seo %}
-    {% include head-custom.html %} -->
+    <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" type="text/css" media="screen" href="style.css">
+    <title>Black coffee. Neat scotch.</title>
   </head>
 
   <body>
 
     <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-            <h1 id="project_title">Black coffee. Neat whisky.</h1>
-        </header>
+    <div class="outer">
+      <header class="inner">
+          <h1 id="project_title">Black coffee. Neat scotch.</h1>
+      </header>
+      
+      <div class="nav"><ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="books/reading.html">Reading & Reviews</a></li>
+        <li><a href="math/main.html">Math</a></li>
+        <li><a href="projects/projects.html">Projects</a></li>
+        <li><a href="about.html">About</a></li>
+    </ul></div>
+    
     </div>
 
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
-        <nav class="inner"><ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="books/reading.html">Reading & Reviews</a></li>
-            <li><a href="math/main.html">Math</a></li>
-            <li><a href="projects/projects.html">Projects</a></li>
-            <li><a href="about.html">About</a></li>
-        </ul></nav>
-
-
       <section id="main_content" class="inner">
         {{ content }}
       </section>
