--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,10 +12,8 @@
   <body>
 
     <!-- HEADER -->
-    <div class="outer">
-      <header class="inner">
-          <h1 id="project_title">Black coffee. Neat scotch.</h1>
-      </header>    
+    <div id="header" class="outer">
+      <header><h1 id="project_title">Black coffee. Neat scotch.</h1> </header>
     </div>
 
     <!-- MAIN CONTENT -->
@@ -33,10 +31,8 @@
     </div>
 
     <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">By Neal Coleman</p>
-      </footer>
+    <div id="footer" class="outer">
+      <footer><h5>© Neal Coleman, 2024-present</h5></footer>
     </div>
   </body>
 </html>
