--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,11 +19,11 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <div class="nav"><ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="books/reading.html">Reading & Reviews</a></li>
-        <li><a href="math/main.html">Math</a></li>
-        <li><a href="projects/projects.html">Projects</a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="/index.html">Home</a></li>
+        <li><a href="/books/reading.html">Reading & Reviews</a></li>
+        <li><a href="/math/main.html">Math</a></li>
+        <li><a href="/projects/projects.html">Projects</a></li>
+        <li><a href="/about.html">About</a></li>
       </ul></div>
       <section id="main_content" class="inner">
         {{ content }}
