--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -62,7 +62,7 @@ footer {
     width: 150%;
     height: 300%;
     border: 1px solid #000;
-    align-self=center
+    align-self: center;
 }
 
 /* Navigation bar
