update including math

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -60,9 +60,9 @@ footer {
 
 .pdfreader {
     width: 150%;
-    height: 300%;
+    height: 600px;
     border: 1px solid #000;
-    align-self: center;
+    margin: auto
 }
 
 /* Navigation bar
