--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -25,8 +25,7 @@ body {
 
 .inner {
     width: 50%;
-    align-content: center;
-    align-items: center;
+    justify-content: center;
     background-color: #f9f9f9;
     padding: 1em;
     /* box-shadow: 0 0 10px 0 #000; */
