--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -30,7 +30,6 @@ body {
     padding: 1em;
     /* box-shadow: 0 0 10px 0 #000; */
     margin: auto;
-    display: flex
 }
 
 header {
@@ -61,6 +60,10 @@ footer {
         background-color: #333;
         color: #f9f9f9;
     }
+}
+
+.pdfcontainer {
+    display: flex
 }
 
 .pdfreader {
