--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,7 +5,7 @@
 
 
 body {
-    font-family: Verdana, sans-serif;
+    /* font-family: Verdana, sans-serif; */
     font-size: 16px;
     margin: 0;
     padding: 0;
