--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,7 +5,8 @@
 
 
 body {
-    /* font-family: Verdana, sans-serif; */
+    font-family: "Lora", serif;
+    font-optical-sizing: auto;
     font-size: 16px;
     margin: 0;
     padding: 0;
