--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -14,7 +14,9 @@ body {
 }
 
 h1 {
-    justify-content: center
+    justify-content: center;
+    font-family: "Lora", serif;
+    font-optical-sizing: auto;
 }
 
 .outer {
