update including math

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -19,6 +19,27 @@ h1 {
     font-optical-sizing: auto;
 }
 
+h2 {
+    justify-content: center;
+    font-family: "Lora", serif;
+    font-optical-sizing: auto;
+}
+h3 {
+    justify-content: center;
+    font-family: "Lora", serif;
+    font-optical-sizing: auto;
+}
+h4 {
+    justify-content: center;
+    font-family: "Lora", serif;
+    font-optical-sizing: auto;
+}
+h5 {
+    justify-content: center;
+    font-family: "Lora", serif;
+    font-optical-sizing: auto;
+}
+
 .outer {
     margin: 0 auto;
     /* width: 80%; */
