--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,6 +8,7 @@ body {
     font-family: "Lora", serif;
     font-optical-sizing: auto;
     font-size: 16px;
+    font-weight: 600;
     margin: 0;
     padding: 0;
     background-color: #f4f4f4;
