update including math

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,9 +23,9 @@
     <div id="main_content_wrap" class="outer">
       <div class="nav"><ul>
         <li><a href="/about.html">About</a></li>
-        <li><a href="/math/main.html">Math</a></li>
-        <li><a href="/projects/projects.html">Projects</a></li>
-        <li><a href="/books/reading.html">Reading & Reviews</a></li>
+        <li><a href="/math.html">Math</a></li>
+        <li><a href="/reading.html">Reading & Reviews</a></li>
+        <li><a href="/projects.html">Projects</a></li>
         <li><a href="/index.html">Home</a></li>
       </ul></div>
       <section id="main_content" class="inner">
