update including math

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -103,6 +103,10 @@ footer {
     margin: auto
 }
 
+.posts {
+    display: flex;
+}
+
 /* Navigation bar
 /* For wide screens, on left
 /* For narrow screens, on right */
