update including math

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -113,7 +113,8 @@ footer {
     height: 300px;
     width: 300px;
     box-shadow: 0 0 10px 0 #000;
-
+    text-align: center;
+    text-justify: newspaper;
 }
 
 .content {
