--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -118,9 +118,8 @@ footer {
 }
 
 .content {
-    width: 100%;
+    // width: 100%;
     margin: auto;
-    padding: 1em;
     box-shadow: 0 0 10px 0 #000;
     margin: auto;
 }
