--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -120,6 +120,7 @@ footer {
 .content {
     // width: 100%;
     margin: auto;
+    padding-block: 1em;
     box-shadow: 0 0 10px 0 #000;
     margin: auto;
 }
